# ChangeLog for app-emacs/emacs-wiki
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/emacs-wiki/ChangeLog,v 1.8 2005/04/12 08:42:39 ming Exp $

*emacs-wiki-2.68 (12 Apr 2005)

  12 Apr 2005; Ming Zhao <ming@gentoo.org> emacs-wiki-2.68.ebuild :
  version bumped. SRC_URI was changed to the maintainers homepage.

*emacs-wiki-2.67.1 (01 Feb 2005)

  01 Feb 2005; Matthew Kennedy <mkennedy@gentoo.org> metadata.xml,
  +emacs-wiki-2.67.1.ebuild:
  New upstream version; Expanded metadata.xml

*emacs-wiki-2.40 (10 Sep 2003)

  10 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  minor version bump

*emacs-wiki-2.14 (31 Oct 2002)

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  emacs-wiki-2.14.ebuild, files/50emacs-wiki-gentoo.el, 
  files/digest-emacs-wiki-2.14 :

  Initial import.