@@ -1,6 +1,7 @@
+MD5 942044df68da39340d4832492e060926 emacs-wiki-2.69.ebuild 1096
 MD5 69fa210d818deb70389c3e1ed1226ccf emacs-wiki-2.14.ebuild 867
 MD5 3a39530d34ca39664619d4cd47aed02c emacs-wiki-2.67.1.ebuild 1104
-MD5 6e8ddc3e258a5f16fbbd79159b6259ac ChangeLog 870
+MD5 db5ca78213f43ff8cbf4b3398fbf3d3a ChangeLog 992
 MD5 ad233270cb8f454e2923316f8c7e229d metadata.xml 808
 MD5 664aa7d9fee77b1e9405a6565e82118a emacs-wiki-2.68.ebuild 1096
 MD5 44c707f56bb6180b075384fc4a710aad emacs-wiki-2.40.ebuild 906
@@ -8,4 +9,5 @@ MD5 081198f96f94a7fec69d8c9569242eec files/digest-emacs-wiki-2.67.1 74
 MD5 6060bb4b4159bc744fa83b78cb6d7199 files/digest-emacs-wiki-2.14 67
 MD5 c1bbf7263b5d377f29344ec70b4aa320 files/digest-emacs-wiki-2.40 66
 MD5 25f85dd336ce50b5e1c9114d7165a933 files/digest-emacs-wiki-2.68 67
+MD5 54010873793caf7c486543d0daf07dd8 files/digest-emacs-wiki-2.69 67
 MD5 75277e8288b9116c92657bdf4f54b68e files/50emacs-wiki-gentoo.el 111
